--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css"> 
-    <title>Harvest Home Pub Quiz</title>
+    <title>Mac Keating Quiz App</title>
 </head>
 
 <body>
     <div class="container flex-column flex-center">
         <div class="image-container">
-            <h1 class="overlay-title">Harvest Home</h1>
-            <h2>Pub Quiz.</h2>
-            <img src="../HarvestHome.jpg" alt="My Image">
+            <h1 class="overlay-title">Mac Keating</h1>
+            <h2>Smartphone Quiz app.</h2>
+            <img src="../Mackeating.JPG" alt="My Image">
         </div>
             <a href="game.html" class="btn">Play Quiz</a>
             <a href="highscores.html" class="btn">Leaderboard</a>
